config/participants/pineapplepay/pisp-demo-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pisp-demo-server
  labels:
    app: pisp-demo-server
spec:
  replicas: 0
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1 # exeed the replicas by 1 pod
  selector:
    matchLabels:
      app: pisp-demo-server
  template:
    metadata:
      labels:
        app: pisp-demo-server
    spec:
      volumes:
        - name: firebase-secret-volume
          secret:
            secretName: firebase-secret
      containers:
        - name: pisp-demo-server
          image: mojaloop/pisp-demo-server:v0.1.7
          # command: ["tail", "-f", "/dev/null"]
          livenessProbe:
            initialDelaySeconds: 10
            periodSeconds: 30
            httpGet:
              path: /app/health
              port: 8080
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 30
            httpGet:
              path: /app/health
              port: 8080
          volumeMounts:
            - name: firebase-secret-volume
              mountPath: "/opt/pisp-demo-server/secret/serviceAccountKey.json"
              subPath: serviceAccountKey.json

---
apiVersion: v1
kind: Service
metadata:
  name: pisp-demo-server
spec:
  ports:
    # TODO:
    - port: 8080
      name: ui
  selector:
    app: pisp-demo-server
  clusterIP: None
